[package]
name = "mq_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
fe2o3-amqp = { version = "0.10.0", default-features = false }
futures-util = { version = "0.3.30", default-features = false }
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.37.0", features = ["net", "rt", "rt-multi-thread", "macros"] }
url = { version = "2.5.0", default-features = false }
